--- a/caffe-easy/.gitignore
+++ b/caffe-easy/.gitignore
@@ -16,8 +16,8 @@
 *.a
 
 # Compiled protocol buffers
-*.pb.h
-*.pb.cc
+# *.pb.h
+# *.pb.cc
 *_pb2.py
 
 # Compiled python
@@ -103,3 +103,4 @@ temp
 examples/*/*lmdb
 
 3rd
+/3rd.rar
