添加了任务池

--- a/caffe-easy/windows-cpu/classification_dll_debug/classification_dll_debug.vcxproj
+++ b/caffe-easy/windows-cpu/classification_dll_debug/classification_dll_debug.vcxproj
@@ -195,6 +195,7 @@
   <ItemGroup>
     <ClCompile Include="..\..\support\classification\classification.cpp" />
     <ClCompile Include="..\..\support\classification\debug.cpp" />
+    <ClCompile Include="..\..\support\classification\task_pool.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\support\classification\classification-c.h" />
