--- a/caffe-easy/windows-gpu/classification_dll_debug/classification_dll_debug.vcxproj.filters
+++ b/caffe-easy/windows-gpu/classification_dll_debug/classification_dll_debug.vcxproj.filters
@@ -16,6 +16,9 @@
     <ClCompile Include="..\..\support\classification\classification.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\support\classification\task_pool.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\support\classification\classification.h">
