改进了任务池的支持，添加了socket-server

--- a/caffe-easy/windows-cpu/classification_dll/classification_dll.vcxproj.filters
+++ b/caffe-easy/windows-cpu/classification_dll/classification_dll.vcxproj.filters
@@ -38,6 +38,6 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="def.def" />
+    <None Include="..\..\support\def.def" />
   </ItemGroup>
 </Project>
