--- a/caffe-easy/windows-gpu/socket-server/socket-server.vcxproj
+++ b/caffe-easy/windows-gpu/socket-server/socket-server.vcxproj
@@ -11,9 +11,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{30139B51-E5C0-4468-AFB5-E9E7BE686CEF}</ProjectGuid>
+    <ProjectGuid>{47A27BF5-D4C8-4C7E-80BF-BC3D510C852E}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>convert_annoset</RootNamespace>
+    <RootNamespace>ssd_call</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
@@ -47,14 +47,14 @@
     <IncludePath>../../include;../../3rd/include/protobuf;../../3rd/include/;../../3rd/include/openblas0.2.14.1;../../include\caffe\proto;../../support\network;../../support\mtcnn;../../support\classification;../../support;../../support\train\lmdb;../../3rd/include/opencv2.4.10;../../3rd/include/opencv2.4.10/opencv;../../3rd/include/opencv2.4.10/opencv2;$(VC_IncludePath);$(WindowsSDK_IncludePath)</IncludePath>
     <LibraryPath>../../3rd/staticlib/boost/$(Platform)/;../../3rd/staticlib/gflags/$(Platform)/;../../3rd/staticlib/glog/$(Platform)/;../../3rd/staticlib/protobuf/$(Platform)/;../../3rd/staticlib/openblas/$(Platform)/;../../3rd/staticlib/opencv2.4.10/$(Platform)/vc$(PlatformToolsetVersion)/staticlib;../../Build/gpu/$(Configuration)/$(Platform)/;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
     <OutDir>../../Build/gpu/$(Configuration)/$(Platform)/</OutDir>
-    <IntDir>../../Build/gpu/outobj/$(ProjectName)/$(Configuration)/$(Platform)/</IntDir>
+    <IntDir>../../Build/gpu/outobj/$(ProjectName)/$(Configuration)</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <IncludePath>../../include;../../3rd/include/protobuf;../../3rd/include/;../../3rd/include/openblas0.2.14.1;../../include\caffe\proto;../../support\network;../../support\mtcnn;../../support\classification;../../support;../../support\train\lmdb;../../3rd/include/opencv2.4.10;../../3rd/include/opencv2.4.10/opencv;../../3rd/include/opencv2.4.10/opencv2;$(VC_IncludePath);$(WindowsSDK_IncludePath)</IncludePath>
     <LibraryPath>../../3rd/staticlib/boost/$(Platform)/;../../3rd/staticlib/gflags/$(Platform)/;../../3rd/staticlib/glog/$(Platform)/;../../3rd/staticlib/protobuf/$(Platform)/;../../3rd/staticlib/openblas/$(Platform)/;../../3rd/staticlib/opencv2.4.10/$(Platform)/vc$(PlatformToolsetVersion)/staticlib;../../Build/gpu/$(Configuration)/$(Platform)/;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
     <OutDir>../../Build/gpu/$(Configuration)/$(Platform)/</OutDir>
-    <IntDir>../../Build/gpu/outobj/$(ProjectName)/$(Configuration)/$(Platform)/</IntDir>
+    <IntDir>../../Build/gpu/outobj/$(ProjectName)/$(Configuration)</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -103,7 +103,7 @@
   <ItemGroup>
     <ProjectReference Include="..\libcaffe\windows-gpu.vcxproj">
       <Project>{c140902d-9ab4-4c4e-8684-9077c476cdb7}</Project>
-      <Private>true</Private>
+      <Private>false</Private>
       <ReferenceOutputAssembly>true</ReferenceOutputAssembly>
       <CopyLocalSatelliteAssemblies>true</CopyLocalSatelliteAssemblies>
       <LinkLibraryDependencies>true</LinkLibraryDependencies>
@@ -111,7 +111,24 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\tools\convert_annoset.cpp" />
+    <ClCompile Include="..\..\support\classification\classification.cpp" />
+    <ClCompile Include="..\..\support\socket-server\client_context.cpp" />
+    <ClCompile Include="..\..\support\socket-server\context_pool.cpp" />
+    <ClCompile Include="..\..\support\socket-server\func.cpp" />
+    <ClCompile Include="..\..\support\socket-server\liaojie_server.cpp" />
+    <ClCompile Include="..\..\support\socket-server\main.cpp" />
+    <ClCompile Include="..\..\support\socket-server\server_iocp.cpp" />
+    <ClCompile Include="..\..\support\ssd\pa_draw.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\support\classification\classification-c.h" />
+    <ClInclude Include="..\..\support\classification\classification.h" />
+    <ClInclude Include="..\..\support\socket-server\client_context.h" />
+    <ClInclude Include="..\..\support\socket-server\context_pool.h" />
+    <ClInclude Include="..\..\support\socket-server\def.h" />
+    <ClInclude Include="..\..\support\socket-server\func.h" />
+    <ClInclude Include="..\..\support\socket-server\liaojie_server.h" />
+    <ClInclude Include="..\..\support\socket-server\server_iocp.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
