--- a/caffe-easy/windows-gpu/socket-server/socket-server.vcxproj.filters
+++ b/caffe-easy/windows-gpu/socket-server/socket-server.vcxproj.filters
@@ -34,6 +34,9 @@
     <ClCompile Include="..\..\support\socket-server\server_iocp.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\support\classification\task_pool.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\support\classification\classification.h">
