修正C#的训练部分，并添加训练部分代码

--- a/caffe-easy/windows-cpu/classification_dll_debug/classification_dll_debug.vcxproj.filters
+++ b/caffe-easy/windows-cpu/classification_dll_debug/classification_dll_debug.vcxproj.filters
@@ -19,6 +19,9 @@
     <ClCompile Include="..\..\support\classification\task_pool.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\support\classification\train.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\support\classification\classification.h">
