--- a/caffe-easy/windows-gpu/classification_dll/classification_dll.vcxproj.filters
+++ b/caffe-easy/windows-gpu/classification_dll/classification_dll.vcxproj.filters
@@ -22,6 +22,9 @@
     <ClCompile Include="..\..\support\classification\task_pool.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\support\classification\convert_imageset.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\support\model_compress\caffe_layer_vector.h">
